tokenizer and lineizer completed, creating symbol table started

--- a/jf/jf/jf.csproj
+++ b/jf/jf/jf.csproj
@@ -33,6 +33,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Compiler.cs" />
+    <Compile Include="Explanation.cs" />
+    <Compile Include="SymbolTable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
