--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Performable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runner.cs" />
     <Compile Include="SymbolTable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
