runner improved, new command type, test type is just for test and add string to end of richTextBox

--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AGauge.designer.cs">
       <DependentUpon>AGauge.cs</DependentUpon>
     </Compile>
+    <Compile Include="Command.cs" />
     <Compile Include="richtextBoxHighlighter.cs" />
     <Compile Include="Compiler.cs" />
     <Compile Include="CustomError.cs" />
