conditions parts added, now runner can check conditions with checkCondition function. brake and wait commands use this function and work corectly. if command and 3 other type of loop that use condition should be added

--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runner.cs" />
+    <Compile Include="Sensor.cs" />
+    <Compile Include="SensorHandler.cs" />
     <Compile Include="SymbolTable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
