--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -54,6 +54,12 @@
       <DependentUpon>AGauge.cs</DependentUpon>
     </Compile>
     <Compile Include="Command.cs" />
+    <Compile Include="AutomaticForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AutomaticForm.Designer.cs">
+      <DependentUpon>AutomaticForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="richtextBoxHighlighter.cs" />
     <Compile Include="Compiler.cs" />
     <Compile Include="CustomError.cs" />
@@ -74,6 +80,9 @@
     <Compile Include="SymbolTable.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AutomaticForm.resx">
+      <DependentUpon>AutomaticForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
