--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -47,41 +47,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AGauge.cs">
+    <Compile Include="UI\AGauge.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="AGauge.designer.cs">
+    <Compile Include="UI\AGauge.designer.cs">
       <DependentUpon>AGauge.cs</DependentUpon>
     </Compile>
-    <Compile Include="Command.cs" />
-    <Compile Include="AutomaticForm.cs">
+    <Compile Include="logic\Command.cs" />
+    <Compile Include="UI\AutomaticForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AutomaticForm.Designer.cs">
+    <Compile Include="UI\AutomaticForm.Designer.cs">
       <DependentUpon>AutomaticForm.cs</DependentUpon>
     </Compile>
     <Compile Include="richtextBoxHighlighter.cs" />
-    <Compile Include="Compiler.cs" />
-    <Compile Include="CustomError.cs" />
-    <Compile Include="Explanation.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="logic\Compiler.cs" />
+    <Compile Include="logic\CustomError.cs" />
+    <Compile Include="logic\Explanation.cs" />
+    <Compile Include="UI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="UI\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Node.cs" />
-    <Compile Include="Performable.cs" />
+    <Compile Include="logic\Node.cs" />
+    <Compile Include="logic\Performable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runner.cs" />
-    <Compile Include="Sensor.cs" />
-    <Compile Include="SensorHandler.cs" />
-    <Compile Include="SymbolTable.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="logic\Runner.cs" />
+    <Compile Include="logic\Sensor.cs" />
+    <Compile Include="logic\SensorHandler.cs" />
+    <Compile Include="logic\SymbolTable.cs" />
+    <EmbeddedResource Include="UI\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AutomaticForm.resx">
+    <EmbeddedResource Include="UI\AutomaticForm.resx">
       <DependentUpon>AutomaticForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
